sugar/tests/success/not.mx

not : ~ ((1+1) -o (1+1)) |-
    let x,r = not in
    case x of
        { inl y -> let () = y in let u = snd r in u
        ; inr z -> let () = z in let u = fst r in u
        }

